--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -6,7 +6,7 @@
 
   <% if enhanced_cart.empty? %>
   <div class="alert alert-info">
-    <p>Your cart is empty.</p>
+    <p>Your cart is empty 😦 Return to the homepage to continue navigation!</p>
     <%= link_to "HomePage", root_path, class: "btn btn-primary" %>
   </div>
 <% else %>
