--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -8,6 +8,11 @@
     <div>
       <h1><%= @product.name %></h1>
       <p><%= @product.description %></p>
+      <% if @product.quantity.zero? %>
+      <div class="sold-out-badge">
+        <span>Sold Out</span>
+      </div>
+    <% else %>
       <div class="quantity">
         <span><%= @product.quantity %> in stock at </span>
         <span><%= humanized_money_with_symbol(@product.price) %></span>
@@ -17,6 +22,7 @@
           <%= fa_icon "shopping-cart", text: 'Add' %>
         <% end %>          
       </div>
+      <% end %>  
     </div>
   </article>
 
