--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -8,6 +8,26 @@
     <h4>Thank you for your order!</h4>
   </div>
 
+  <div class="line-items">
+  <% @order.line_items.each do |line_item| %>
+    <div class="line-item">
+      <%= image_tag line_item.product.image.url, class: 'line-item-image' %>
+      <div class="line-item-details">
+        <h3><%= line_item.product.name %></h3>
+        <p><%= line_item.product.description %></p>
+      </div>
+      <div class="line-item-quantity">
+        <p>Quantity: <%= line_item.quantity %></p>
+        <p>Total: <%= line_item.total_price %></p>
+      </div>
+    </div>
+  <% end %>
+</div>
+
+<div class="order-details">
+  <p>Final Amount: <%= humanized_money_with_symbol(@order.final_amount) %></p>
+  <p>Email: <%= @order.email %></p>
+</div>
   <%= link_to "Continue Shopping", root_path, class: 'btn btn-lg btn-primary' %>
 
 </section>
