--- a/app/views/admin/dashboard/show.html.erb
+++ b/app/views/admin/dashboard/show.html.erb
@@ -1,2 +1,6 @@
 <h1>Admin::Dashboard#show</h1>
-<p>Find me in app/views/admin/dashboard/show.html.erb</p>
+<div>
+  <h2>Store Statistics</h2>
+  <p>Total Products: <%= @product_count %></p>
+  <p>Total Categories: <%= @category_count %></p>
+</div>
