--- a/app/views/admin/categories/new.html.erb
+++ b/app/views/admin/categories/new.html.erb
@@ -1,6 +1,15 @@
 <h1>Create New Category</h1>
 
 <%= form_with(model: @category, url: admin_categories_path) do |form| %>
+  <% if @category.errors.any? %>
+    <h2>Errors:</h2>
+    <ul>
+      <% @category.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+    </ul>
+  <% end %>
+
   <%= form.label :name %>
   <%= form.text_field :name %>
 
