--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -57,12 +57,14 @@
           <ul class="dropdown-menu dropdown-menu-dark">
             <li><%= link_to 'Dashboard', [:admin, :root], class: "nav-link" %></li>
             <li><%= link_to 'Products', [:admin, :products], class: "nav-link" %></li>
-            <li><%= link_to 'Add New Category', new_admin_category_path %></li>
+            <li><%= link_to 'Add New Category', new_admin_category_path, class: "nav-link" %></li>
 
           </ul>
         </li>
         <li class="nav-item end-0">
           <%= link_to cart_path, class: "nav-link " do %> <%= fa_icon "shopping-cart" %>
+            <li><%= link_to 'Sign Up', signup_path %></li>
+<li><%= link_to 'Log In', login_path %></li>
           My Cart (<%= cart.size %>) <% end %>
         </li>
       </ul>
