--- a/app/assets/stylesheets/product.scss
+++ b/app/assets/stylesheets/product.scss
@@ -87,5 +87,9 @@
       font-weight: 700;
       text-align: center;
     }
+    .sold-out-badge span {
+      color: red;
+      position: absolute;
+    }
   }
 }
