--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -1,7 +1,6 @@
 main section.products-index,
 main section.categories-show {
   .products {
-
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     gap: 1.5em;
@@ -35,7 +34,8 @@ main section.categories-show {
       text-align: center;
       border-radius: 0.25em;
       border: 0.1em solid rgba(0, 130, 29, 0.3);
-      box-shadow: rgba(0, 130, 29, 0.16) 0px 3px 6px, rgba(0, 130, 29, 0.23) 0px 3px 6px;
+      box-shadow: rgba(0, 130, 29, 0.16) 0px 3px 6px,
+        rgba(0, 130, 29, 0.23) 0px 3px 6px;
       // transition: opacity 300ms linear;
 
       &:hover {
@@ -88,10 +88,11 @@ main section.categories-show {
           background-color: rgba(0, 130, 29, 0.7);
           color: white;
         }
-      
+        .sold-out-badge button {
+          background-color: red;
+          right: 0;
+        }
       }
     }
   }
-
 }
-
