--- a/app/views/admin/dashboard/show.html.erb
+++ b/app/views/admin/dashboard/show.html.erb
@@ -1,6 +1,9 @@
-<h1>Admin::Dashboard#show</h1>
+<h1>Dashboard</h1>
 <div>
   <h2>Store Statistics</h2>
   <p>Total Products: <%= @product_count %></p>
   <p>Total Categories: <%= @category_count %></p>
+
+  
 </div>
+
