--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -67,11 +67,12 @@
       My Cart (<%= cart.size %>)
     <% end %>
   </li>
+
   <li><%= cookies[:email] %></li>
-  <li><%= link_to 'Log Out', logout_path, method: :delete %></li>
+  <li class= "logout-btn"><%= link_to 'Log Out', logout_path, method: :delete %></li>
 <% else %>
-  <li><%= link_to 'Sign Up', signup_path %></li>
-  <li><%= link_to 'Log In', login_path %></li>
+  <li class= "signup-btn"><%= link_to 'Sign Up', signup_path %></li>
+  <li class="login-btn"><%= link_to 'Log In', login_path %></li>
 <% end %>
 </ul>
     </div>
